@@ -37,7 +37,7 @@
 
 <addon id="plugin.video.jagobd"
        name="JagoBD.com"
-       version="1.0.5"
+       version="1.0.6"
        provider-name="shani">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
