@@ -13,3 +13,5 @@ B]Version 1.0.3[/B]
 
 [B]Version 1.0.4[/B]
 - recent key changes
+[B]Version 1.0.6[/B]
+- mobile access
